http://jira.jboss.org/jira/browse/JBIDE-1544
Need add @catalogProperty@@schemaProperty@ back to persistence.xml templates file in seam-gen.
JUnit tests also added.

git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@5496 a97e2381-89e5-4abb-bab3-167db6db766c